src/components/sbb-navigation-list/sbb-navigation-list.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

.sbb-navigation-list__content {
  @include sbb.list-reset;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: var(--sbb-spacing-fixed-2x);
  margin-block: var(--sbb-spacing-fixed-1x);
}

.sbb-navigation-list__label {
  @include sbb.text-xxs--bold;

  display: inline-block;
  color: var(--sbb-color-storm-default);
  margin-block-end: var(--sbb-spacing-fixed-2x);
}

